syntax = "proto3";

option csharp_namespace = "GrpcClient";

service LocationService {
	rpc GetCoordinates(LocationId) returns(CoordinatesData);
	rpc GetAddress(LocationId) returns(AddressData);
	rpc Get(LocationId) returns(LocationData);
	rpc Create(LocationData) returns(LocationId);
}

message CoordinatesData {
	float latitude = 1;
	float longitude = 2;
}

message LocationData {
	string address = 1;
	string postCode = 2;
	string country = 3;
	string town = 4;
	float latitude = 5;
	float longitude = 6;
}

message AddressData {
	string address = 1;
	string postCode = 2;
	string country = 3;
	string town = 4;
}

message LocationId {
	int32 id = 1;
}
